--- a/.github/workflows/master_branch.yml
+++ b/.github/workflows/master_branch.yml
@@ -41,7 +41,7 @@ jobs:
     name: Creates Docker image and pushes it to Docker Hub
     runs-on: ubuntu-latest
     needs:
-      - tag
+      - build
     steps:
       - uses: actions/checkout@v2
       - name: Build and push Docker images
