--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -8,12 +10,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.3.2.RELEASE</version>
-    <relativePath /> <!-- lookup parent from repository -->
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.mika</groupId>
   <artifactId>WineApp</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.8-SNAPSHOT</version>
   <name>WineApp</name>
   <description>REST back end for a wine tasting notes app</description>
 
@@ -21,7 +23,7 @@
     <connection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</connection>
     <url>http://github.com/mika-alaoutinen/WineApp</url>
     <developerConnection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</developerConnection>
-    <tag>1.0.8</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
