--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.2.RELEASE</version>
+    <version>2.5.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -27,8 +27,7 @@
   </scm>
 
   <properties>
-    <java.version>14</java.version>
-    <h2database.version>1.4.200</h2database.version>
+    <java.version>16</java.version>
     <jjwt.version>0.9.1</jjwt.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <springdoc-openapi-ui.version>1.4.3</springdoc-openapi-ui.version>
@@ -67,7 +66,6 @@
       <!-- In-memory DB for running tests -->
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>${h2database.version}</version>
       <scope>test</scope>
     </dependency>
     <!-- Development utilities -->
