--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.0</version>
+    <version>2.5.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -29,6 +29,8 @@
     <java.version>16</java.version>
     <jjwt.version>0.9.1</jjwt.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <openapi-generator-version>5.2.1</openapi-generator-version>
+    <!-- delete this -->
     <springdoc-openapi-ui.version>1.4.3</springdoc-openapi-ui.version>
   </properties>
 
@@ -101,6 +103,7 @@
   <build>
     <plugins>
       <plugin>
+        <!-- Maven releases -->
         <artifactId>maven-release-plugin</artifactId>
         <version>${maven-release-plugin.version}</version>
         <configuration>
@@ -109,14 +112,33 @@
           <releaseProfiles>release</releaseProfiles>
         </configuration>
       </plugin>
+
+      <!-- OpenAPI code generation -->
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>${openapi-generator-version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml</configurationFile>
+              <inputSpec>
+                https://raw.githubusercontent.com/mika-alaoutinen/maistissa-openapi/master/openapi.json
+              </inputSpec>
+              <generatorName>spring</generatorName>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
-      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
