--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,9 +35,9 @@ admin:
   username: admin
   password: password
 
-# Allow connections from this URL:
+# Allow connections from these URLs:
 frontend:
-  url: http://localhost:8081
+  urls: http://localhost:8081,http://localhost:3000
 
 
 # Wine parser settings:
