--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
 
     <!-- JWT for authentication -->
@@ -148,6 +149,13 @@
               <goal>generate</goal>
             </goals>
             <configuration>
+              <configOptions>
+                <additionalModelTypeAnnotations>
+                  @lombok.Builder
+                  @lombok.NoArgsConstructor
+                  @lombok.AllArgsConstructor
+                </additionalModelTypeAnnotations>
+              </configOptions>
               <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml</configurationFile>
               <inputSpec>
                 https://raw.githubusercontent.com/mika-alaoutinen/maistissa-openapi/master/openapi.json
@@ -181,6 +189,12 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>1.18.20</version>
+            </path>
+            <!-- Needed with Lombok 1.18.16 or newer. See https://mapstruct.org/faq/ -->
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok-mapstruct-binding</artifactId>
+              <version>0.2.0</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
