--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <scm>
     <connection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</connection>
-    <url>http://github.com/mika-alaoutinen/WineApp</url>
+    <url>https://github.com/mika-alaoutinen/WineApp</url>
     <developerConnection>scm:git:https://github.com/mika-alaoutinen/WineApp.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
@@ -28,11 +28,12 @@
   <properties>
     <java.version>16</java.version>
     <jjwt.version>0.9.1</jjwt.version>
+    <lombok.version>1.18.20</lombok.version>
+    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <openapi-generator-version>5.2.1</openapi-generator-version>
-    <!-- delete this -->
-    <springdoc-openapi-ui.version>1.4.3</springdoc-openapi-ui.version>
+    <validation-api.version>2.0.1.Final</validation-api.version>
   </properties>
 
   <dependencies>
@@ -70,6 +71,12 @@
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- For validating entities -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${validation-api.version}</version>
+    </dependency>
 
     <!-- Development utilities -->
     <dependency>
@@ -99,12 +106,6 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- OpenAPI -->
-    <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
-      <version>${springdoc-openapi-ui.version}</version>
-    </dependency>
     <!-- These are needed because OpenAPI generator's Spring profile has them as dependencies -->
     <dependency>
       <groupId>io.swagger</groupId>
@@ -181,13 +182,13 @@
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
-              <version>1.18.20</version>
+              <version>${lombok.version}</version>
             </path>
             <!-- Needed with Lombok 1.18.16 or newer. See https://mapstruct.org/faq/ -->
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok-mapstruct-binding</artifactId>
-              <version>0.2.0</version>
+              <version>${lombok-mapstruct-binding.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
