--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,10 +1,9 @@
-############################
-# Config for running tests #
-############################
-
 spring:
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:tesdb
+    url: jdbc:h2:mem:db
     username: sa
     password:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
