--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
   <properties>
     <java.version>17</java.version>
     <jjwt.version>0.9.1</jjwt.version>
-    <lombok.version>1.18.20</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-    <mapstruct.version>1.4.2.Final</mapstruct.version>
-    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <openapi-generator-version>5.2.1</openapi-generator-version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
+    <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+    <openapi-generator-version>7.2.0</openapi-generator-version>
   </properties>
 
   <dependencies>
@@ -107,6 +107,14 @@
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
+
+    <!-- Misc -->
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-release-plugin</artifactId>
+      <version>${maven-release-plugin.version}</version>
+      <type>maven-plugin</type>
+    </dependency>
   </dependencies>
 
   <build>
@@ -161,7 +169,8 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml</configurationFile>
+              <configurationFile>${project.basedir}/src/main/resources/generatorConfig.yaml
+              </configurationFile>
               <inputSpec>
                 https://raw.githubusercontent.com/mika-alaoutinen/maistissa-openapi/master/openapi.json
               </inputSpec>
