--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '17'
+          distribution: temurin
+          java-version: 21
       - name: Build and test with Maven
         run: mvn -B clean verify --file pom.xml
