--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '17'
+          distribution: temurin
+          java-version: 21
       - name: Build and test with Maven
         run: mvn -B clean install --file pom.xml
 
